fixed word wrap in about me and removed redundant reset.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,8 @@ h1 {
 #profilepic {
     width: 35%;
 }
+
+.textWrap {
+    float: left;
+    margin: 10px;
+}
